{
    "name": "PlayerBatalha",
    "maps": [
        {
            "name": "Controle",
            "id": "7e8f9488-8977-474d-a598-9478326768d3",
            "actions": [
                {
                    "name": "Teclado",
                    "type": "Value",
                    "id": "71f4237e-0681-4beb-b59a-dfdc23db29cd",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Controle",
                    "type": "Value",
                    "id": "2e9ee86d-25cc-4c4d-9375-7afa6f3a8bfa",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Controle-Analog",
                    "type": "Value",
                    "id": "ef3fd87d-3ef2-48e8-b42d-c0444b64e62e",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Pulo",
                    "type": "Button",
                    "id": "a74e91dd-c0a6-463b-89ec-bb1cb1a62236",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Ataque",
                    "type": "Button",
                    "id": "eb9166d1-64ad-4e48-a41c-950b7244f0ec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Start",
                    "type": "Button",
                    "id": "fa20e29d-6698-49bc-9eaf-e90defccd451",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "41537db4-77c2-462b-9752-a18e18c4de6c",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Teclado",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "48f30b95-19b6-4f54-9c9e-d60a4972a10c",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad;GamePad2",
                    "action": "Pulo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87879171-39e7-458e-9c40-74513328cc7c",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad;GamePad2",
                    "action": "Ataque",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Joystick-Pad",
                    "id": "1140b55d-2d94-4510-948b-c15a52de0297",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Controle",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a8b1b7c2-ed98-4e62-9288-9141dbb3fc6e",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad;GamePad2",
                    "action": "Controle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "34ada7ae-82cd-40da-888a-f1bba6456f58",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad;GamePad2",
                    "action": "Controle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "58a336d3-723b-4c33-b500-fbd39a7f912e",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad;GamePad2",
                    "action": "Controle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1933919e-2519-4a03-b48b-0aec5eeaf673",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad;GamePad2",
                    "action": "Controle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Joystick-Analog",
                    "id": "fe2542a4-81e1-4226-a032-e944f7eb67df",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Controle-Analog",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a708d7a0-180e-4821-9e53-a6f838e7d86f",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad;GamePad2",
                    "action": "Controle-Analog",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "727a647c-c3f0-4705-9c59-0a8e222b6599",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad;GamePad2",
                    "action": "Controle-Analog",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4d5318f9-35ec-4f09-a64b-1590034cf794",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad;GamePad2",
                    "action": "Controle-Analog",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3f827695-dfa9-44ad-b307-95b49572853f",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad;GamePad2",
                    "action": "Controle-Analog",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "88d32842-7f6e-4475-b17c-ca075956c610",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad;GamePad2",
                    "action": "Start",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "GamePad",
            "bindingGroup": "GamePad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "GamePad2",
            "bindingGroup": "GamePad2",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}